tests/negative_fixtures/defer_outside_function.shx
// This should fail - defer outside function
defer console.log("this should fail");
console.log("done");
